fix spacing

--- a/styles.css
+++ b/styles.css
@@ -754,6 +754,9 @@ a {
     height: auto;
     max-width: none;
   }
+  .form-section {
+    margin: -300px 0;
+  }
 }
 
 @media (max-width: 600px) {
@@ -785,6 +788,9 @@ a {
     height: auto;
     max-width: none;
   }
+  .form-section {
+    margin: -300px 0;
+  }
 }
 
 @media (max-width: 480px) {
@@ -815,6 +821,9 @@ a {
     width: 100%;
     height: auto;
     max-width: none;
+  }
+  .form-section {
+    margin: -300px 0;
   }
 }
 
